# veracity

./: .gitignore  AXIOM_COUNTING_FIX.md  BINARY_BUILD_FIX.md  BUILD_ISSUE_ANALYSIS.md  CARGO_TOML_FIX.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_COMPLETE.md  M_FLAG_IMPLEMENTATION_SUMMARY.md  M_FLAG_PLAN.md  M_FLAG_STATUS.md  Makefile  README.md  SETUP_COMPLETE.md  TODO  VERUS_DEFAULT_CHANGE.md  rust-toolchain.toml
.cargo/: config.toml
.cursor/rules/: fixture-no-auto-cleanup.mdc  no-touch-external-repos.mdc
.cursor/rules/apas-verus/: accept-hole-rule.mdc  chapter-standalone.mdc  collection-iterators.mdc  comment-style.mdc  exile-on-n-street.mdc  failed-experiments.mdc  float-axiom-fixes.mdc  full-verify.mdc  in-out-table.mdc  lib-rs-structure.mdc  module-header.mdc  mt-standalone.mdc  partialeq-eq-pattern.mdc  pbogh.mdc  propose-new-work.mdc  ptt-commands.mdc  review-against-prose.mdc  senior-proof-engineer.mdc  spec-fn-naming.mdc  table-of-contents-standard.mdc  test-abbreviations.mdc  textbook-no-threshold.mdc  trait-impl-pattern.mdc  use-hf-scheduler.mdc  use-ws-scheduler.mdc  validate.mdc  verusification-table.mdc  when-to-write-ptts.mdc  xlit-macros.mdc
.cursor/rules/git/: create-worktree.mdc  merge-worktree.mdc
.cursor/rules/interaction/: ask-before-commit.mdc  ask-before-push.mdc  copy-icons.mdc  discuss.mdc  dot.mdc  execute-relentlessly-afk.mdc  full-paths.mdc  gate-review-against-prose.mdc  implement.mdc  indexed-tables.mdc  no-cleanup-outputs.mdc  no-python.mdc  plans-directory.mdc  proposed-fixes-table.mdc  rmf.mdc  show-full-output.mdc  show-module-filenames.mdc  show-thinking.mdc  sketch.mdc  step-n.mdc  table-cell-length.mdc  todos-need-approval.mdc  whats-next.mdc  wide-markdown.mdc
.cursor/rules/rust/: no-string-hacking.mdc  senior-rust-engineer.mdc  source-layout.mdc  threaded-test-timeout.mdc
.cursor/rules/style/: comment-style.mdc  may-vs-can.mdc  (+7 more)
analyses/: analyze_rust_wrapping_needs.log.saved  veracity-virify.errs  vstd_inventory.json
docs/: #RustVerusAnalysisPlan.md#  .#RustVerusAnalysisPlan.md  Accepted.md  FloatingPointInVerus.md  PROOF_HOLES_FN_SPEC_PROPOSAL.md  STYLER_TOC_PROPOSAL.md  SpecifyingATotalOrder.md  TestCases.md  TimeTravellingToGetVir.md  TimeTravellingToGetVir.md~  VeracityProofHolesSummary.md  VerusCodeBases.md  VerusStyleGuide.md  VerusStyler.md  VerusSynASTPaths.md  paths-read-write-transformation.md  paths-transformed-files.md  rlimit-fix.md  veracity-classify-spec-strengths-prompt.md  veracity-minimize-lib.md  veracity-proof-holes.md  veracity-review-module-fn-impls.md  veracity-search.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
prompts/: SemanticSearch.md
schemas/: vstd_inventory.schema.json
scripts/: all-update-to-style.sh  regenerate-path.sh  validate.sh
src/: args.rs  lib.rs  parser.rs  search.rs  vstd_inventory.rs
tests/: search_tests.rs  test_vstd_inventory.rs
tests/minimize_lib/: mod.rs
tests/search/: comprehensive_pattern_tests.rs  comprehensive_tests.rs  def_tests.rs  fn_pattern_tests.rs  impl_tests.rs  mod.rs  output_tests.rs  pattern_tests.rs  trait_tests.rs
(+36 files in other folders)
